@@ -7,6 +7,7 @@ CHANGELOG
 
 * Fix compilation of translations (ref #970)
 * Fix distinction between languages and translated languages (fixes #968)
+* Fix history tabs not being shown after upgrade to Django 1.6 (fixes #975)
 
 0.22.4 (2014-03-06)
 -------------------
